--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "bundle/help-fr"]
 	path = bundle/help-fr
 	url = git://github.com/dblanchet/vim-help-fr
+[submodule "bundle/DirDiff"]
+	path = bundle/DirDiff
+	url = https://github.com/vim-scripts/DirDiff.vim.git
